fix: code blocks extra space

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,23 +28,14 @@ h5, h6 {
   color: #101010;
 }
 
-code {
-  padding: 0.25em 0.5em;
-  font-size: 85%;
-  background-color: #f9f9f9;
-  border-radius: 5px;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
 pre {
   display: block;
   padding: 1em;
   font-size: 0.95em;
   line-height: 1.4;
-  white-space: pre-wrap;
-  word-break: break-all;
-  word-wrap: break-word;
+  white-space: pre;
+  word-break: normal;
+  word-wrap: normal;
   background-color: #f9f9f9;
 }
 
